--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 	</p>
 
 	<div class="dummy"></div>
-	<div class="canvas-container"><canvas id="canvas" style="margin: 0px;"></canvas></div>
-
+	<!--<div class="canvas-container"><canvas id="canvas" style="margin: 0px;"></canvas></div>-->
+	<button onclick="myFunc()">Click Me</button>
+	<div id="text"></div>
 	<script>
 		// Make the canvas fill the part of the screen that's not taken up by other elements.
 		console.log("loading...");
