--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 	<div class="dummy"></div>
 	<!--<div class="canvas-container"><canvas id="canvas" style="margin: 0px;"></canvas></div>-->
 	<button onclick="myFunc()">Click Me</button>
+	<input type="text"></input>
 	<div id="text"></div>
 	<script>
 		// Make the canvas fill the part of the screen that's not taken up by other elements.
