--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 		<button id="connect" onclick="app.setupConnection();">Reconnect</button>
 	</p>
 
-	<div class="dummy"></div>
-	<!--<div class="canvas-container"><canvas id="canvas" style="margin: 0px;"></canvas></div>-->
-	<button onclick="myFunc()">Click Me</button>
-	<input type="text"></input>
+	<!--<div class="dummy"></div>
+	<div class="canvas-container"><canvas id="canvas" style="margin: 0px;"></canvas></div>-->
+	<button onclick="myFunc()">Submit</button><br>
+	<input type="text" id="input"></input>
 	<div id="text"></div>
 	<script>
 		// Make the canvas fill the part of the screen that's not taken up by other elements.
