--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 
 	<!--<div class="dummy"></div>
 	<div class="canvas-container"><canvas id="canvas" style="margin: 0px;"></canvas></div>-->
-	<button onclick="myFunc()">Submit</button><br>
+	<button onclick="myFunc()">Submit</button> 
+	<button onclick="myClearFunc()">Clear</button>
+	<br>
 	<input type="text" id="input"></input>
 	<div id="text"></div>
 	<script>
