--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
 		<img class="logotype" src="ui/images/logo.svg" alt="Evothings">
 	</header>
 
-	<h1>MQTT Painter</h1>
-
 	<p>
 		<span id="info">Not Connected</span>
 		<button id="connect" onclick="app.setupConnection();">Reconnect</button>
@@ -51,6 +49,8 @@
 
 	<!--<div class="dummy"></div>
 	<div class="canvas-container"><canvas id="canvas" style="margin: 0px;"></canvas></div>-->
+	<h5>Username: </h5>
+	<input type="text" id="username"></input><br>
 	<button onclick="myFunc()">Submit</button> 
 	<button onclick="myClearFunc()">Clear</button>
 	<br>
