--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 		{
 				height:100%;
 		}
+		button, input {
+			margin: 10px;
+		}
 	</style>
 
 	<script>
@@ -41,6 +44,8 @@
 		</button>
 		<img class="logotype" src="ui/images/logo.svg" alt="Evothings">
 	</header>
+
+	<h1>Mobilu Chat</h1>
 
 	<p>
 		<span id="info">Not Connected</span>
