--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	if (window.hyper && window.hyper.log) { console.log = hyper.log }
 	</script>
 
-	<script src="cordova.js"></script>
+	<!--<script src="cordova.js"></script>-->
 	<script src="app.js"></script>
 
 </head>
@@ -66,14 +66,6 @@
 		console.log("loading...");
 		window.blockMenuHeaderScroll = true;
 		document.body.style.overflow = "hidden";
-		document.onreadystatechange = function () {
-			if (document.readyState == "complete") {
-				var canvas = document.getElementById("canvas");
-				canvas.width = canvas.parentElement.clientWidth;
-				canvas.height = canvas.parentElement.clientHeight;
-				console.log("onload: "+canvas.width+"x"+canvas.height);
-			}
-		};
 	</script>
 
 	<script src="libs/mqttws/mqttws.js"></script>
